--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 ########################################################################
-#       _____     __           _______
-#      /  __  \  /_/          /  ____/                                __
-#     /  /_ / / _   ____     / /__  __  __   ____    ____    ____   _/ /_
-#    /    __ / / / /  _  \  / ___/  \ \/ /  / __ \  / __ \  / ___\ /  _/
-#   /  /\ \   / / /  /_/ / / /___   /   /  / /_/ / /  ___/ / /     / /_
-#  /_ /  \_\ /_/  \__   / /______/ /_/\_\ / ____/  \____/ /_/      \___/
-# 
-#  Copyright (C) Rig Expert Ukraine Ltd.
+#
+# Fobos SDR project
+# V.T.
+# LGPL
+#
 ########################################################################
 #
 # This program is free software: you can redistribute it and/or modify
