--- a/libfobos.pc.in
+++ b/libfobos.pc.in
@@ -7,5 +7,5 @@ Name: RigExpert Fobos SDR Library
 Description: C Utility Library
 Version: @LIBVER@
 Cflags: -I${includedir}/ @LIBFOBOS_PC_CFLAGS@
-Libs: -L${libdir} -lfobos -lusb-1.0
-Libs.private: @LIBFOBOS_PC_LIBS@
+Libs: -L${libdir} -lfobos
+Libs.private: -lusb-1.0 @LIBFOBOS_PC_LIBS@
